Overflow bug fix.

--- a/assets/orbis/css/orbis.css
+++ b/assets/orbis/css/orbis.css
@@ -11,7 +11,7 @@ body {
 
 .sidebar-wrapper {
   background: #222;
-  overflow-y: scroll;
+  overflow-y: auto;
   position: fixed;
   bottom: 0;
   top: 0;
@@ -128,7 +128,12 @@ dd {
 /**
  * Typography
  */
-h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child {
+h1:first-child,
+h2:first-child,
+h3:first-child,
+h4:first-child,
+h5:first-child,
+h6:first-child {
   margin-top: 0;
 }
 
