--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -13,7 +13,7 @@ body {
 .sidebar-wrapper {
     background: #222;
 
-	overflow-y: scroll;
+	overflow-y: auto;
 
     position: fixed;
     bottom: 0;
@@ -148,7 +148,12 @@ dd {
 /**
  * Typography
  */
-h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child {
+h1:first-child,
+h2:first-child,
+h3:first-child,
+h4:first-child,
+h5:first-child,
+h6:first-child {
 	margin-top: 0;
 }
 
